Rust client